[package]
name = "splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "splitter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
lazy_static = "1.4.0"
