[package]
name = "rsplitter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsplitter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
lazy_static = "1.4.0"
