[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"


[project]
name = "rsplitter"
description = "Rust implementation of a words splitter"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
    { name = "Omar MHAIMDAT", email = "omarmhaidmat@gmail.com" }
]
